--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
   <nav id="nav">
     <a href="#" class="nav-logo">
-      <div class="nav-logo-icon"><!-- Replace with: <img src="your-logo.png" alt="Logo"> --><span class="logo-ph">OW</span></div>
+      <div class="nav-logo-icon"><!-- Replace with: <img src="your-logo.png" alt="Logo"> --><img src="logo.png" alt="OnlyWhales"></div>
       <span class="nav-logo-text">Only<span class="w">Whales</span></span>
     </a>
     <div class="nav-center">
